# SnakeGame

./: CMakeLists.txt  README.md
src/: Game.cpp  Snake.cpp  main.cpp
src/includes/: Game.h  Snake.h  Types.h
